# ic-docutrack

./: .gitignore  Cargo.toml  Justfile  README.md  canister_ids.json  dfx.json  package-lock.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/backend/: Cargo.toml
backend/backend/src/: aliases.rs  api.rs  canister.rs  lib.rs  memory.rs  storage.rs  utils.rs
backend/backend/src/api/: download_file.rs  get_requests.rs  get_users.rs  request_file.rs  share_file.rs  upload_file.rs  upload_file_atomic.rs
backend/backend/src/storage/: alias_generator_seed.rs  config.rs  files.rs  memory.rs
backend/backend/src/storage/files/: create_state.rs
backend/did/: Cargo.toml  build.rs
backend/did/src/: backend.rs  file_id_vec.rs  lib.rs  orchestrator.rs  principal.rs  user_canister.rs  utils.rs
backend/did/src/backend/: file.rs
backend/did/src/orchestrator/: pagination.rs  public_file_metadata.rs  shared_files.rs  user.rs  user_canister.rs  whoami.rs
backend/did/src/user_canister/: delete_file.rs  file.rs  path.rs  request_file.rs  upload_file_atomic.rs
backend/orchestrator/: Cargo.toml
backend/orchestrator/src/: canister.rs  client.rs  config.rs  lib.rs  memory.rs  storage.rs  utils.rs
backend/orchestrator/src/canister/: create_user.rs
backend/orchestrator/src/client/: orbit_station.rs  user_canister.rs
backend/orchestrator/src/storage/: config.rs  memory.rs  shared_files.rs  user_canister.rs  users.rs
backend/orchestrator/src/storage/shared_files/: shared_with_set.rs  user_shared_files.rs
backend/orchestrator/src/storage/user_canister/: create_state.rs
backend/user_canister/: Cargo.toml
backend/user_canister/src/: aliases.rs  canister.rs  client.rs  inspect.rs  lib.rs  storage.rs  utils.rs
backend/user_canister/src/canister/: share.rs
backend/user_canister/src/client/: orchestrator.rs
backend/user_canister/src/storage/: config.rs  files.rs  memory.rs
backend/user_canister/src/storage/files/: create_state.rs  data_storage.rs  file_alias_index.rs  file_contents.rs  file_count.rs  owned_files.rs  path_storage.rs  shared_files.rs
backend/user_canister/src/storage/files/shared_files/: storable.rs
candid/: orchestrator.did  user_canister.did
docs/: README.md  api.md  architecture.md  flows.md  getting-started.md
docs/diagrams/: arch.drawio
frontend/: package.json  vite.config.ts
frontend/declarations/marketing/: index.d.ts
frontend/declarations/orchestrator/: index.js  orchestrator.did.d.ts  orchestrator.did.js
frontend/declarations/user_canister/: index.js  user_canister.did.d.ts  user_canister.did.js
frontend/scripts/: readCanisterIds.ts
frontend/src/frontend/declarations/marketing/: index.js
frontend/src/frontend/declarations/orchestrator/: index.js  orchestrator.did  orchestrator.did.d.ts  orchestrator.did.js
frontend/src/frontend/declarations/user_canister/: index.js  user_canister.did  user_canister.did.d.ts  user_canister.did.js
frontend/src/frontend/src/lib/: buffer.js  crypto.js  file.js
frontend/src/frontend/src/lib/components/: Disclaimer.svelte  RegistrationModal.svelte  RequestModal.svelte  ShareModal.svelte
frontend/src/frontend/src/lib/components/Details/: DecryptProgress.svelte  Details.svelte
frontend/src/frontend/src/lib/components/Home/: FileList.svelte
frontend/src/frontend/src/lib/components/Requests/: RequestsList.svelte
frontend/src/frontend/src/lib/components/Upload/: Upload.svelte
frontend/src/frontend/src/lib/components/icons/: DeleteIcon.svelte
frontend/src/frontend/src/lib/services/: auth.ts  decrypt.ts  files.ts  requests.ts  upload.ts  user.ts
frontend/src/frontend/src/lib/shared/: actor.ts
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  pocket_ic.rs  wasm.rs
integration-tests/src/pocket_ic/: backend_client.rs  cycles.rs  orchestrator_client.rs  user_canister_client.rs
integration-tests/src/pocket_ic/cycles/: cmc.rs
integration-tests/tests/pocket_ic/: backend.rs  mod.rs  orchestrator.rs  user_canister.rs
just/: build.just  ci.just  dependencies.just  deploy.just  orbit.just  orchestrator.just  station.just  test.just
pocket-test/: Cargo.toml
scripts/: dfx_wasm.py  get_account_id.py
