[workspace]
members = ["backend/backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-stable-structures = "0.6.8"
candid = { version = "0.10", features = ["value"] }
# NOTE: A specific commit of ciborium is used that includes efficient serializion/deserialization of
#       blobs. At the time of this writing, a new version including this commit hasn't yet been released.
ciborium = "0.2"
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
rand_chacha = "0.3"
serde = "1"
serde_bytes = "0.11"
