[workspace]
members = [
  "backend/did",
  "backend/orchestrator",
  "backend/user_canister",
  "integration-tests",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
candid = { version = "0.10", features = ["value"] }
candid_parser = "0.2.0-beta.4"
getrandom = { version = "0.3", default-features = false }
git2 = "0.20"
ic-cdk = "0.18.2-alpha.1"
ic-cdk-macros = "0.18"
ic-cdk-timers = "0.12.0-alpha.1"
ic-stable-structures = "0.6.8"
rand = { version = "0.9", features = ["std_rng", "small_rng"] }
rand_chacha = "0.9"
serde = "1"
serde_bytes = "0.11"
station-api = { git = "https://github.com/dfinity/orbit", tag = "@orbit/station-v0.5.0" }
time = { version = "0.3", default-features = false, features = ["parsing"] }

# integration-tests
anyhow = "1"
flate2 = "1"
ic-agent = "0.40"
ic-ledger-types = "0.15.0-alpha.3"
ic-utils = "0.40"
log = "0.4"
pocket-ic = "9"
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["full"] }
